gradebook.css
@font-face {
    font-family:"gradebook-icons";
    src:url(lib/fonts/gradebook-icons.eot);
    src:url(lib/fonts/gradebook-icons.eot?#iefix) format("embedded-opentype"),url(lib/fonts/gradebook-icons.woff) format("woff"),url(lib/fonts/gradebook-icons.ttf) format("truetype"),url(lib/fonts/gradebook-icons.svg#gradebook-icons) format("svg");
    font-weight:400;
    font-style:normal
}

html {
  font-family: "Helvetica Neue", Helvetica, Arial;
  font-size: 14px;
}

#addGradeItem {
  display: inline-block;
  float: left;
  margin-top: 20px;
  margin-left: 20px;
  padding: 0px 8px 0;
  margin: 8px 0;
  line-height: 24px;
}

#addGradeItem:before {
  font-family: 'nyu-classes-icons';
  content: '\e612';
  padding-right: 4px;
}

#gradebookSpreadsheet {
  margin-top: 20px;
}

.gradebook-wrapper {
  width: 100%;
  overflow: auto;
  background: #fafafa;
}

#studentFilter, #sectionFilter, #gradeFilter {
  height: 2em;
  margin-top: 6px;
  border: 1px solid #DDD;
  padding: 6px;
  background-color: #FFF;
}
#studentFilter {
  border-radius: 10px;
  line-height: 1em;
}
.clearable-input {
  display: inline-block;
  position: relative;
}
.clearable-input-x:after {
  display: inline-block;
  font-family: 'nyu-classes-icons';
  content: '\e608';
  position: absolute;
  right: 5px;
  top: 10px;
  font-size: 12px;
  color: #AAA;
  cursor: pointer;
}
.clearable-input-x:hover:after {
  color: #2F7FAB;
}
.gradebook-table {
  overflow: hidden;
}
.gradebook-table-body {
  clear: both;
}
.gradebook-column {
  float: left;
}
.gradebook-column:nth-child(2n) .gradebook-cell,
.gradebook-column:nth-child(2n) input {
  /*background-color: #FAFAFA;*/
}
.gradebook-header-cell {
  padding: 4px 0;
  background-color: #F0F0F0;
  text-align: center;
  /*background-image: linear-gradient(#F6F6F6, #E6E6E6); */
  text-shadow: 1px 1px 1px #FFF;
  height: 52px;
  line-height: 1.2em;
}
.gradebook-header-cell-selectable {
  cursor: pointer;
}
.gradebook-header-cell small {
  transition: color 0.5s;
  color: #AAA;
}
.gradebook-header-cell:hover small {
  transition: color 0.5s;
  color: #777;
}
.gradebook-cell {
  height: 2em;
  line-height: 2em;
  padding: 4px;
  background-color: #FFF;
  border: 1px solid transparent;
  border-bottom: 1px solid #FAFAFA;
  border-right: 1px solid #FAFAFA;
  position: relative;
}
.gradebook-user-label {
}
.gradebook-user-label.gradebook-cell-highlight {
  box-shadow: none;
}
.gradebook-user-label .first-name:after,
.gradebook-user-label .last-name:after {
  content: ' ';
}
.gradebook-user-label .netid:before {
  content: '(';
}
.gradebook-user-label .netid:after {
  content: ')';
}
.sort-by-last-name .gradebook-user-label .last-name:after {
  content: ', ';
}
.hide-student-names .first-name,
.hide-student-names .last-name {
  display: none;
}
.hide-student-names .gradebook-user-label {
  text-align: center;
}
.hide-student-names .gradebook-user-label .netid {
  color: #444;
}
.hide-student-names .gradebook-user-label .netid:before,
.hide-student-names .gradebook-user-label .netid:after {
  content: '';
}
.gradebook-user-label .netid {
  color: #999;
}
.gradebook-item-cell {
  text-align: center;
}
.gradebook-item-cell input {
  width: 98%;
  font-size: 12px;
  height: 2em;
  border:none;
  padding: none;
  margin: none;
  text-align: center;
}
.gradebook-item-cell.gradebook-cell-active input {
  width: 45%;
  text-align: right;
}
.gradebook-item-max {
  color: #AAA;
  width: 30%;
  display: inline-block;
  text-align: left;
  text-shadow: 1px 1px 1px #FFF;
  display: none;
}
.gradebook-cell-active .gradebook-item-max {
  display: inline-block;
}
.gradebook-column.gradebook-column-highlight .gradebook-cell,
.gradebook-column.gradebook-column-highlight .gradebook-header-cell,
.gradebook-column.gradebook-column-highlight input,
.gradebook-column-group.gradebook-fixed-columns .gradebook-cell.gradebook-cell-highlight,
.gradebook-column:nth-child(2n) .gradebook-cell.gradebook-cell-highlight,
.gradebook-column:nth-child(2n) .gradebook-cell.gradebook-cell-highlight input,
.gradebook-cell-highlight,
.gradebook-cell-highlight input {
  background-color: #FAFAFA;
}
.gradebook-column-group.gradebook-fixed-columns .gradebook-cell.gradebook-cell-highlight {
  background-color: #FAFAFA !important;
}
.hide-categories .gradebook-header-cell {
  background-color: #F0F0F0 !important;
}
.gradebook-column-group.gradebook-fixed-columns .gradebook-cell.gradebook-user-label.gradebook-cell-highlight,
.gradebook-header-cell.gradebook-cell-highlight {
  background: #e3e3e3 !important;
}
.gradebook-column.gradebook-column-highlight .gradebook-cell-active,
.gradebook-cell.gradebook-item-cell:focus {
  border: 3px solid #3698DB;
  padding: 2px;
  background-color: #FFF !important;
  z-index: 1;
}

.gradebook-column.gradebook-column-highlight .gradebook-cell-active,
.gradebook-column.gradebook-column-highlight .gradebook-cell-active input,
.gradebook-cell.gradebook-item-cell:focus input {
  background-color: #FFF !important;
}

.gradebook-column .gradebook-cell.gradebook-user-label,
.gradebook-column .gradebook-cell.gradebook-course-total {
  background-color: #FFF;
  border-bottom: 1px solid #FAFAFA;
}
.gradebook-cell.gradebook-cell-error, 
.gradebook-cell.gradebook-cell-error input {
  background-color: #FEE !important;
}

.gradebook-cell-active,
.gradebook-cell-active input {
  background-color: #FFF !important;
}

.gradebook-section, .gradebook-course-total {
  text-align: center;
}
.gradebook-header-cell {
  color: #000;
}
.gradebook-average,
.gradebook-header-average-cell {
  border-left: 1px solid #CCC;
}
.gradebook-scaled-total,
.gradebook-header-scaled-total-cell {
  border-right: 1px solid #CCC;
}
.gradebook-header-cell.gradebook-header-cell-selectable:hover {
  background-image: none;
  background-color: #E9E9E9;
}
.gradebook-header-cell.gradebook-header-cell-selectable.gradebook-header-cell-selected {
  background-image: none;
  background-color: #f3f3f3;
}
/* ... */

